plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.atquil'
version = '0.0.1-SNAPSHOT'
description = 'seat-saga-platform'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // === Core Application Dependencies ===
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'       // Web stack
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'     // ORM / JPA
    implementation 'org.springframework.boot:spring-boot-starter-validation'   // Bean validation
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'    // DB migrations

    // === Observability & Security ===
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' //Google Login
    implementation 'org.springframework.boot:spring-boot-starter-actuator'     // Health/metrics endpoints
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'                 // Prometheus metrics
    implementation 'org.springframework.boot:spring-boot-starter-security'     // Security

    // === API Documentation ===
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'   // Swagger/OpenAPI

    // === Database Driver ===
    runtimeOnly 'org.postgresql:postgresql'                                    // PostgreSQL JDBC driver

    // === Utility Dependencies ===
    compileOnly 'org.projectlombok:lombok'                                     // Lombok (compile-time only)
    annotationProcessor 'org.projectlombok:lombok'

    // === Testing Dependencies ===
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-liquibase-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}
bootJar {
    // Custom name of the fat jar that will be built to build/libs/seat-saga-platform.jar
    // This allows the Dockerfile to always look for "seat-saga-platform.jar" regardless of version.
    archiveFileName = "seat-saga-platform.jar"
}
